tests/fixtures/invalid/pow_int_float_set.py
# Cannot call pow() with Int, Float, Set[int]
x = pow(1, 1.0, {1, 2, 3})
